GeneWeb Version 1.10
--------------------

* GeneWeb daemon/CGI (gwd)
  - [11/12/98] Fixed more bugs (accents) due to new ANSEL encoding.

* Lexicon file (lexicon.txt)
  - [11/12/98] Fixed bug and completed Dutch version (thanks to Joris Esch).

* Dutch welcome file (nl/start.txt)
  - [11/12/98] Fixed and completed (thanks to Joris Esch).

* GeneWeb uncompiler (gwu)
  - [11/12/98] Save memory consummation.

GeneWeb Version 1.09
--------------------

* Inside databases
--- Precisions of dates now apply not only for years, but for complete
    date. E.g. "maybe on september 1815" or "after september 23, 1815".
--- In dates, added case "between": between year and another year.
  - Structure of databases have been changed for these two above points.
  - Area "comment" in families is now kept even if there are children.

* Gedcom to GeneWeb (ged2gwb)
  - Delete of duplicated FAMS which sometimes happen in erroneous Gedcoms.
  - Delete families from GEDCOM when parents dont have the good sex.
  - Added displaying of line number when syntax errors and unrecognized dates.
  - Get sources if defined by pointer (but just the 1st line).
  - Added option "-no_nd" (no negative dates), not to interpret years preceded
    by a minus sign as negative dates.

* GeneWeb to Gedcom (gwb2ged)
  - Added option "-ascii" to output in ASCII encoding instead of ANSEL.

* Gedcom to GeneWeb and GeneWeb to Gedcom (ged2gwb, gwb2ged)
  - The <em>GeneWeb</em> fields "public name", "surname alias" and
    "photo" are now loaded from and saved to Gedcom resp. as: "2 GIVN",
    "2 SURN" and "1 OBJE (newline) 2 FILE".

* GeneWeb daemon/CGI (gwd)
--- Added alibity to specify someone as Sosa reference. Then the Sosa
    number is printed in navigation when displaying ancestors. Thanks to
    Emmanuelle Visseaux for this idea.
--- Restructuration of displaying of surnames and first names by alphabetic
    order and frequency. Fixed bug of bad alphabetic order when first names