@@ -11,7 +11,8 @@ GeneWeb Version 1.10
   - [11/12/98] Fixed and completed (thanks to Joris Esch).
 
 * GeneWeb uncompiler (gwu)
-  - [11/12/98] Save memory consummation.
+  - [11/12/98] Save memory consummation + added option "-fast" to run faster
+    but necessiting much more memory.
 
 GeneWeb Version 1.09
 --------------------
